[package]
name = "ngspice-parser"
authors = ["Vignesh P <vignesh-p@outlook.com>"]
license = "MIT"
description = "A simple parser to parse ngspice raw files"
homepage = "https://github.com/vigneshpa/ngspice-parser"
readme="Readme.md"
repository = "https://github.com/vigneshpa/ngspice-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"